# rest-api-example

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: deps.py  main.py  routes.py  schemas.py  services.py  utils.py
app/tests/: conftest.py  test_routes.py  test_schemas.py  test_services.py
