[tool.poetry]
name = "rest-api-example"
version = "0.1.0"
description = ""
authors = ["carlos1377 <carlos.orso@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
